Ubaceni login na front

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,38 @@
-<router-outlet></router-outlet>
+
+<header class="site-header">
+    <div class="site-identity">
+      <a href="#"><img src="assets/olympicGames.png" alt="Site Name" /></a>
+      <h1><a href="#">Olympic Games Tokyo 2020</a></h1>
+    </div>  
+    <nav class="site-navigation">
+      <ul class="nav">
+        <li><a href="">Home</a></li> 
+        <li><a href="https://github.com/DjordjeD">About</a></li> 
+      </ul>
+    </nav>
+  </header>
+  
+  <router-outlet></router-outlet>
+
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
+
+<footer class="footer-bar bg-dark">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-sm-6 footer-bar">
+                        <div class="text-sm-left">
+                            <p class="mb-0 footer-text para-desc mx-auto">&copy; 2021 Djordje Dimitrijevic. Design with <i class="mdi mdi-heart text-danger"></i>.</p>
+                        </div>
+                    </div><!--end col-->
+
+                    <div class="col-sm-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
+                        <ul class="list-unstyled terms-service text-sm-right mb-0">
+                            <li class="list-inline-item mb-0"><a href="https://github.com/DjordjeD" class="footer-text mr-2">About</a></li>
+                            <li class="list-inline-item mb-0"><a href="https://redtech.cc/" class="footer-text mr-2">Services</a></li>
+                            <li class="list-inline-item mb-0"><a href="https://www.linkedin.com/in/djordje-dimitrijevic14/" class="footer-text">Contact</a></li>
+                        </ul>
+                    </div><!--end col-->
+                </div><!--end row-->
+            </div><!--end container-->
+        </footer>
