ostao backend za registar

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -28,7 +28,7 @@
             </p>
 
             <div class="button">
-                <button type="submit" mat-button>Login</button>
+                <button type="submit" mat-button color="primary">Login</button>
             </div>
 
         </form>
