--- a/frontend/src/app/change-password/change-password.component.html
+++ b/frontend/src/app/change-password/change-password.component.html
@@ -1,1 +1,34 @@
-<p>change-password works!</p>
+
+<mat-card>
+    <mat-card-title>Change Password</mat-card-title>
+    <mat-card-content>
+        <form [formGroup]="form" (ngSubmit)="submit()">
+            <p>
+                <mat-form-field>
+                    <input type="text" matInput placeholder="Username" formControlName="username">
+                </mat-form-field>
+            </p>
+
+            <p>
+                <mat-form-field>
+                    <input type="password" matInput placeholder="Password" formControlName="password">
+                </mat-form-field>
+            </p>
+
+            
+            <p>
+                <mat-form-field>
+                    <input type="password" matInput placeholder="New Password" formControlName="newPassword">
+                </mat-form-field>
+            </p>
+            <p *ngIf="error" class="error">
+                {{ error }}
+            </p>
+
+            <div class="button">
+                <button type="submit" mat-button color="primary">Login</button>
+            </div>
+
+        </form>
+    </mat-card-content>
+</mat-card>
