--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,1 +1,71 @@
-<p>register works!</p>
+<mat-card>
+    <mat-card-title>Register</mat-card-title>
+    <mat-card-content>
+        <form [formGroup]="form" (ngSubmit)="submit()">
+
+
+            <p>
+                <mat-form-field>
+                    <input type="text" matInput placeholder="Name" formControlName="name">
+                </mat-form-field>
+            </p>
+
+            <p>
+                <mat-form-field>
+                    <input type="text" matInput placeholder="Surname" formControlName="surname">
+                </mat-form-field>
+            </p>
+
+            <p>
+                <mat-form-field>
+                    <input type="text" matInput placeholder="Country" formControlName="country">
+                </mat-form-field>
+            </p>
+
+            <p>
+                <mat-form-field>
+                    <input type="text" matInput placeholder="Username" formControlName="username">
+                </mat-form-field>
+            </p>
+
+            <p>
+                <mat-form-field>
+                    <input type="password" matInput placeholder="Password" formControlName="password">
+                </mat-form-field>
+            </p>
+
+            <p>
+                <mat-form-field>
+                    <input type="password" matInput placeholder="Repeat Password" formControlName="repeatPassword">
+                </mat-form-field>
+            </p>
+
+            <p>
+                <mat-form-field>
+                    <input type="text" matInput placeholder="Email" formControlName="email">
+                </mat-form-field>
+            </p>
+
+
+
+
+            <div>
+                <label>Float label: </label>
+                <mat-radio-group [formControl]="floatLabelControl">
+                    <mat-radio-button value="delegate">Delegate</mat-radio-button>
+                    <mat-radio-button value="nationalDelegate">National delegate</mat-radio-button>
+                </mat-radio-group>
+            </div>
+
+
+            <p *ngIf="error" class="error">
+                {{ error }}
+            </p>
+
+            <div class="button">
+                <button type="submit" mat-button color="primary">Register</button>
+            </div>
+
+        </form>
+    </mat-card-content>
+</mat-card>
