--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -46,9 +46,16 @@ body {
   }
   
   .site-identity img {
-    max-width: 55px;
+
+    display: block;
+    float:left;
+    margin-top: 20px;
+    margin-right: 20px;
+    max-width: 85px;
+    width: 100%;
+    /* max-width: 55px;
     float: left;
-    margin: 0 10px 0 0;
+    margin: 0 10px 0 0; */
   }
   
   .site-navigation {
