--- a/frontend/src/app/countries-represent/countries-represent.component.html
+++ b/frontend/src/app/countries-represent/countries-represent.component.html
@@ -1,1 +1,82 @@
-<p>countries-represent works!</p>
+<mat-toolbar color="primary">
+
+
+    <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+    <mat-menu #menu="matMenu">
+
+
+        <div>
+            <button mat-menu-item color="primary" (click)="medalsRepresent()">Olympic Medal Count </button>
+        </div>
+
+
+        <div>
+            <button mat-menu-item color="primary" (click)="home()">Home </button>
+        </div>
+
+
+
+    </mat-menu>
+    <span class="example-spacer"></span>
+
+    <div *ngIf="!registered">
+        <button class="distance-buttons" mat-raised-button aria-label="Example icon-button with heart icon" (click)="register()">
+            Register
+        </button>
+    </div>
+ 
+        
+    <div class="buttons-row">
+
+        <button class="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon" (click)="login()">
+            Login
+        </button>
+        <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon" (click)="changePassword()">
+        Change password
+        </button>
+        <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon" (click)="home()">
+            Back
+        </button>
+    </div>
+    
+
+</mat-toolbar>
+
+<br>
+
+<div class="container">
+    <h5>Countries</h5>
+    <div class="row">
+        <div class="col-12">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Country</th>
+                        <th scope="col">Flag</th>
+                        <th scope="col">Number of Athletes</th>
+
+                    </tr>
+                </thead>
+                <tbody>
+
+                    <tr *ngFor='let c of countries'>
+                        <td>
+                            {{c.countryName}}
+
+                        </td>
+                        <td>
+                            <img src="/assets/{{c.flagImage}}" class="img-thumbnail" style="width: 80px; height: 50px" alt="">
+                        </td>
+                        <td>
+        
+                            {{c.numberOfAthletes}}
+                        </td>
+                        
+
+                    </tr>
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
