--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -14,7 +14,7 @@
                 </mat-form-field>
             </p>
             <div>
-                <label>Float label:  </label>
+                <label>Select type of user</label>
                 <mat-radio-group [formControl]="floatLabelControl">
                   <mat-radio-button value="organizer">Organizer</mat-radio-button>
                   <mat-radio-button value="delegate">Delegate</mat-radio-button>
