--- a/frontend/src/app/organizer/organizer.component.html
+++ b/frontend/src/app/organizer/organizer.component.html
@@ -17,6 +17,10 @@
             <button mat-menu-item color="primary" (click)="home()">Home </button>
         </div>
 
+        <div>
+            <button mat-menu-item color="primary" (click)="records()">Records </button>
+        </div>
+
 
 
 
@@ -43,6 +47,8 @@
 
 </mat-toolbar>
 
+<h2 > Organizer Page <span class="badge bg-info"></span></h2>
+
 <!-- < <mat-card>
     <mat-card-title>Insert a new Sport</mat-card-title>
     <mat-card-content>
@@ -60,7 +66,7 @@
 
     </mat-card-content>
     </mat-card> -->
-
+    <br>
 
     <mat-card>
         <mat-card-title>Insert A New Discipline</mat-card-title>
@@ -107,7 +113,7 @@
                
 
 
-                <button mat-raised-button color="primary" (click)="addDiscipline()">Search</button>
+                <button mat-raised-button color="primary" (click)="addDiscipline()">Insert</button>
 
 
             </form>
