--- a/frontend/src/app/add-tournament/add-tournament.component.html
+++ b/frontend/src/app/add-tournament/add-tournament.component.html
@@ -104,12 +104,12 @@
                 </mat-radio-group>
            
 
-                <!-- <mat-label> Men or Women? </mat-label>
+                <mat-label> Men or Women? </mat-label>
                 <mat-radio-group [formControl]="typeFormControl">
                   <mat-radio-button value="man">Man</mat-radio-button>
                   <mat-radio-button value="woman">Woman</mat-radio-button>
                 </mat-radio-group>
-                 -->
+                
                 <!-- <div *ngIf="individualFormControl.value=='team'">
                     <mat-form-field appearance="fill">
                         <mat-label>Minimum players</mat-label>
@@ -199,7 +199,7 @@
     </mat-card>
     <br>
 
-    <h4>View and edit which Teams/Individuals play at which tournament by pressing on the button in the table</h4> 
+    <h4>View and edit which Teams/Individuals play at which tournament and assign delegates by pressing on the button in the table</h4> 
 
     <br>
 
