radi register, radimo ogranizatora

--- a/frontend/src/app/home-page/home-page.component.html
+++ b/frontend/src/app/home-page/home-page.component.html
@@ -19,7 +19,7 @@
   </mat-menu>
   <span class="example-spacer"></span>
   
-  <div *ngIf="!registered">
+  <div *ngIf="registered">
     <button class="distance-buttons" mat-raised-button aria-label="Example icon-button with heart icon" (click)="register()">
       Register
     </button>
