--- a/frontend/src/app/records/records.component.html
+++ b/frontend/src/app/records/records.component.html
@@ -77,7 +77,7 @@
                     {{c.athleteCountry.countryName}}
                   </td>
                   <td>
-                    {{c.result}
+                    {{c.result}}
                   </td>
                   <td>
                     {{c.date}}
