--- a/frontend/src/app/add-sport/add-sport.component.html
+++ b/frontend/src/app/add-sport/add-sport.component.html
@@ -11,6 +11,7 @@
     
        
           <button mat-raised-button color="primary"  (click)="addSport()" >Add</button>
+          <button mat-raised-button color="primary"  (click)="back()" >Back to organizer</button>
          
         </form>
     
